# restful-todo-list-django

./: .dockerignore  .env.dev.example  .env.test.example  .gitignore  Dockerfile.dev  README.md  coverage.v2.sh  docker-compose.dev.yml  entrypoint.dev.sh  makemigrations.sh  pyproject.toml  requirements.txt  requirements_dev.txt  test.v2.sh  up.dev.v2.sh
api/apps/todolist/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
api/apps/todolist/migrations/: 0001_initial.py
api/apps/todolist/tests/: test_services.py  test_view.py
api/config/: settings.py  urls.py
