[tool.poetry]
name = "todo-list-django"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
redis = {extras = ["hiredis"], version = "^5.0.1"}
django-debug-toolbar = "^4.3.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.1"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
flake8 = "^4"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
